--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "TSGS"]
+	path = TSGS
+	url = https://github.com/sudhirsrivastava/tsgs
+	shallow = true
+	registered = true
